added static labels in en.json file for QAT-5434

--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3579,5 +3579,35 @@
   "static.currency.conversionrateusd": "Conversion rate to 1 USD",
   "static.logout.confirmLogout": "Are you sure you want to log out?",
   "static.common.node": "Node",
-  "static.pipeline.pipelineConvertorLinux": "Linux."
+  "static.pipeline.pipelineConvertorLinux": "Linux.",
+  "static.supplyPlanFormula.consensusConsumption": "Consensus Consumption",
+  "static.supplyPlanFormula.consensusConsumptionTxt": "This consumption type is only used if there are multiple programs selected for aggregation. Consensus consumption is the sum of selected programs actual consumption values each month, if available, otherwise it will sum the forecasted consumption values. Thus, it may include both forecasted and actual values.",
+  "static.supplyPlanFormula.consensusConsumptionEx1": "Program A Forecasted Consumption",
+  "static.supplyPlanFormula.consensusConsumptionEx2": "Program A Actual Consumption",
+  "static.supplyPlanFormula.consensusConsumptionEx3": "Program B Forecasted Consumption",
+  "static.supplyPlanFormula.consensusConsumptionEx4": "Program B Actual Consumption",
+  "static.supplyPlanFormula.consensusConsumptionEx5": "Program C Forecasted Consumption",
+  "static.supplyPlanFormula.consensusConsumptionEx6": "Program C Actual Consumption",
+  "static.supplyPlanFormula.consensusConsumptionFormula": "550 (Program A Actual) + 300 (Program B Actual) + 1,050 (Program C Forecast)",
+  "static.supplyPlanFormula.expiredStockNoteP2": "If the report includes multiple programs or planning units, all expiries within the same month will be aggregated (summed) into a single total quantity.",
+  "static.showFormula.endingBalancePI1": "= Opening Balance - Consumption + Shipments +/- Adjustments - Projected Expired Stock",
+  "static.showFormula.endingBalance3.1": "User-entered inventory OR Max (Projected Inventory, 0)",
+  "static.supplyPlan.unmetDemandP1": "When actual consumption is available = (Actual consumption * Days stocked out) / (Days in Month – Days Stocked out)",
+  "static.supplyPlan.unmetDemandP2": "When no actual consumption is available = Projected Inventory* (if Projected Inventory is <0)",
+  "static.supplyPlan.exampleActualConsumption": "Example with actual consumption",
+  "static.supplyPlan.unmetDemandNote": "If the report includes multiple programs or planning units, any unmet demand within the same month will be aggregated (summed) into a single total quantity.",
+  "static.supplyPlanFormula.amcNote2": "If the report includes multiple programs or planning units, the AMC of the selected program/planning units will be aggregated (summed) into a single total quantity.",
+  "static.supplyPlanFormula.monthsOfStockMultiprogramPU": "Months Of Stock for Multi-program/planning unit",
+  "static.supplyPlanFormula.monthsOfStockMultiprogramPUFormulae": "Months Of Stock = (sum of selected programs/planning units’ ending balance / sum of selected programs/planning units’ AMC)",
+  "static.supplyPlanFormula.monthsOfStockEx5Txt1": "Program A Ending Balance = 10,000",
+  "static.supplyPlanFormula.monthsOfStockEx5Txt2": "Program A AMC = 2,500",
+  "static.supplyPlanFormula.monthsOfStockEx5Txt3": "Program B Ending Balance = 6,000",
+  "static.supplyPlanFormula.monthsOfStockEx5Txt4": "Program B AMC = 3,000",
+  "static.supplyPlanFormula.monthsOfStockEx5Txt5": "Program C Ending Balance = 750",
+  "static.supplyPlanFormula.monthsOfStockEx5Txt6": "Program C AMC = 250",
+  "static.supplyPlanFormula.monthsOfStockEx5Txt7": "Months Of Stock = (10,000 + 6,000 + 750) / (2,500 + 3,000 + 250)",
+  "static.supplyPlanFormula.monthsOfStockEx5Txt8": "Months Of Stock = 2.91",
+  "static.supplyPlan.minMonthsOfStockNotes": "If the report includes multiple programs or planning units, QAT will use the average of the selected program & planning units’ Min Month Of Stock.",
+  "static.supplyPlanFormula.maxMonthOfStockNotes": "If the report includes multiple programs or planning units, QAT will use the average of the selected program & planning units’ Max Month Of Stock.",
+  "static.supplyPlan.maxQtyNotes": "If the report includes multiple programs or planning units, QAT will use the average of the selected program & planning units’ Min/Max Quantity."
 }
