--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -166,6 +166,7 @@
   "static.QATForecastImport.National": "National",
   "static.problemActionReport.problemCategory": "Problem Category",
   "static.tooltip.PriceType": "Select a procurement agent for your price type If PA proces are available QAT will populate the price You may override QAT provided prices with your own. If you dont see the desired procurement agent, select custom and indicate the procurement agent name in the notes.",
+  "static.supplyPlanFormula.consensusConsumptionTxt": "This consumption type is only used if there are multiple programs selected for aggregation. Consensus consumption is the sum of selected programs actual consumption values each month, if available, otherwise it will sum the forecasted consumption values. Thus, it may include both forecasted and actual values.",
   "static.forecastErrorReport.planningUnitAboveThresholdNote": "Note: The Forecast Error Threshold values will not be highlighted red if viewing this report in Equivalency Units or multiple Forecasting Units/Planning Units",
   "static.report.shipmentCost": "Shipment Cost",
   "static.mt.reminders2D": "Conversion Factor –",
@@ -291,6 +292,7 @@
   "static.tree.annualTargetLabel": "This calculator allows users to convert their annual targets into monthly rates directly in QAT for purposes of monthly tree forecasting. This feature is generally appropriate for products that are discrete, rather than continuous. The calculator requires actual data for the year before the forecast, the annual targets during the forecast period, and the target for the year after the forecast. QAT then calculates the change between these annual figures to generate a monthly change. The calculator will then populate the start month and value in the `Node Tab` and rows in the `Modeling & Transfer` tab.\nNote that there will always be minor differences in the final annual total forecasted and your target. However, the difference will be small if your targets change at a similar rate from year to year. The benefit of using the calculator is that it provides a dynamic rather than stairstep forecast.",
   "static.compareAndSelect.selectForecast": "Click Planning Unit to display details",
   "static.tree.displayDate": "Display Date",
+  "static.supplyPlanFormula.consensusConsumptionFormula": "550 (Program A Actual) + 300 (Program B Actual) + 1,050 (Program C Forecast)",
   "static.procurementagent.programtext": "Program is required",
   "static.mt.showDetails": "Details",
   "static.equivalancyUnit.EquivalencyUsed": "Where are equivalency units used?",
@@ -327,6 +329,7 @@
   "static.user.lastLoginDate": "Last Login Date",
   "static.common.showGuidance": "Show Guidance",
   "static.mt.oneOrderAtATime": "Please select only 1 order at a time.",
+  "static.supplyPlan.unmetDemandNote": "If the report includes multiple programs or planning units, any unmet demand within the same month will be aggregated (summed) into a single total quantity.",
   "static.commitTree.serverProcessing": "Server Processing",
   "static.supplyPlan.orderNo": "Shipment No.",
   "static.program.validseafreighttext": "Enter sea freight percentage",
@@ -548,8 +551,10 @@
   "static.program.validstatus": "Select Status",
   "static.message.fundingSource.listNotFound": "No funding source found",
   "static.shipment.linkingsuccess": "Shipment linked successfully",
+  "static.supplyPlan.unmetDemandP1": "When actual consumption is available = (Actual consumption * Days stocked out) / (Days in Month – Days Stocked out)",
   "static.dashboard.shipmentsTooltip": "Counts the number of PUs that have shipments with receive dates in the past, or shipments that should have been “submitted” based on program lead times",
   "static.priority.high": "High",
+  "static.supplyPlan.unmetDemandP2": "When no actual consumption is available = Projected Inventory* (if Projected Inventory is <0)",
   "static.commitTree.forecastValidation": "Forecast Validation",
   "static.common.integrationViewtext": "Select integration View",
   "static.shipment.receiveddate": "Receive Date",
@@ -687,6 +692,7 @@
   "static.supplyPlanFormula.inventoryTurns5L1": "Update the “plan by” setting in ",
   "static.user.agreement": "End User License Agreement",
   "static.country.duplicateCountry": "Duplicate Country Found",
+  "static.supplyPlan.unmetDemandDef": "Occurs when the ending balance is '0' and part of consumption was unmet, or when adjusted consumption accounts for days stocked out. Unmet demand can also happen when a negative manual adjustment is larger than the projected ending balance.",
   "static.commit.newDataLatestVersion": "New data from latest version",
   "static.commit.negativeStock": "Batches have negative stock!",
   "static.report.consumptionReport": "Consumption Report",
@@ -694,6 +700,7 @@
   "static.ManageTree.Percentage": "Percentage",
   "static.tree.%of": "% of",
   "static.tooltip.Tes": "Whereas a moving average weighs each data point equally, exponential smoothing uses older data at exponentially decreasing weights over time. Triple exponential smoothing applies smoothing to the level (alpha), trend (beta), and seasonality (gamma) - parameters are set between 0 and 1, with values close to 1 favoring recent values and values close to 0 favoring past values.\nConfidence interval:  between 0% and 100% (exclusive) e.g. 90% confidence interval indicates 90% of future points are to fall within this radius from prediction.\nAlpha (level), beta (trend), gamma (seasonality): between 0 and 1, with values close to 1 favoring recent values and values close to 0 favoring past values. \nSee 'Show Guidance' for more.\n",
+  "static.supplyPlanFormula.maxMonthOfStockNotes": "If the report includes multiple programs or planning units, QAT will use the average of the selected program & planning units’ Max Month Of Stock.",
   "static.supplyPlanFormula.endingBalanceFormula": "Ending balance",
   "static.reports.forecastMetrics.noConsumption": "Current month does not contain actual consumption and/or forecasted consumption",
   "static.procurementUnit.heightQty": "Height Quantity",
@@ -722,6 +729,7 @@
   "static.report.freightPer": "Freight (%)",
   "static.dashboard.realmcountrylist": "Realm countries",
   "static.report.historicalConsumptionDiff": "Historical Consumption Difference",
+  "static.supplyPlan.minMonthsOfStockNotes": "If the report includes multiple programs or planning units, QAT will use the average of the selected program & planning units’ Min Month Of Stock.",
   "static.report.isincludeplannedshipmentSelect": "Include Planned Shipments",
   "static.whatIf.validEndValue": "Enter End Value",
   "static.compareAndSelect.belowLowestConsumption": "% below forecast.",
@@ -801,6 +809,7 @@
   "static.integration.addProgramIntegration": "Add Program Integration",
   "static.translation.french": "French",
   "static.setupprogram.ArrivedtoReceived": "Arrived to Received",
+  "static.supplyPlanFormula.expiredStockNoteP2": "If the report includes multiple programs or planning units, all expiries within the same month will be aggregated (summed) into a single total quantity.",
   "static.quantimed.importpercentage": "Import Percentage",
   "static.dimension.dimensionName": "Dimension name",
   "static.program.programMaster": "Program",
@@ -1199,6 +1208,7 @@
   "static.productCategory.productCategoryTree": "Planning Unit Category Tree",
   "static.dataEntryAndAdjustments.UnderReporting": "Adjust for under-reporting",
   "static.dashboard.myAccess": "My Access",
+  "static.supplyPlan.exampleActualConsumption": "Example with actual consumption",
   "static.loadProgram.oldVersion": "Older version is downloaded.",
   "static.supplyPlan.expiry": "Expiry",
   "static.dashboard.overview": "Overview",
@@ -1580,6 +1590,7 @@
   "static.extrapolation.MoreSophisticated": "More sophisticated models are more sensitive to problems in the data",
   "static.ModelingTransfer.calculatesFebMonth": "QAT calculates this change to be 54.86 in Feb-22 month, and",
   "static.dashboard.stockstatusacrossplanningunit": "Stock Status Snapshot",
+  "static.showFormula.endingBalance3.1": "User-entered inventory OR Max (Projected Inventory, 0)",
   "static.shipment.manualShipments": "Manual Shipment",
   "static.formula.suggestedText59": "If one or both of the next 2 months (N+1 or N+2) is",
   "static.supplyPlan.autoAllocated": "Auto-Allocated*",
@@ -1736,6 +1747,7 @@
   "static.procurementAgent.UnitPerContainer": "Unit Per 40' Container",
   "static.loadDelDataset.keepLatestVersionDeleteOldVersion": "Keep latest version and delete older versions.",
   "static.report.timeWindow": "Time Window",
+  "static.supplyPlan.maxQtyNotes": "If the report includes multiple programs or planning units, QAT will use the average of the selected program & planning units’ Min/Max Quantity.",
   "static.importFromQATSupplyPlan.pleaseSelectSupplyPlanVersion": "Please select supply plan version",
   "static.forecastReport.desiredMonthsOfStock": "Desired Months of Stock",
   "static.procurementAgentProcurementUnit.skuCode": "SKU Code",
@@ -2222,6 +2234,7 @@
   "static.procurementAgentPlanningUnit.validMoq": "Enter Minimum Order Quantity (MOQ)",
   "static.dashboard.totalExpiriesCost": "Total Cost of Expiries",
   "static.NodeData.TreeStructure": "While the tree structure stays constant throughout time, node percentages and values can change over time. The three functionalities below are available in each node and allow the user to control how nodes change over time",
+  "static.supplyPlanFormula.monthsOfStockMultiprogramPUFormulae": "Months Of Stock = (sum of selected programs/planning units’ ending balance / sum of selected programs/planning units’ AMC)",
   "static.supplyPlan.fefo": "FEFO",
   "static.tree.updateSuccessMessageAll": "Your selected planning units have been updated successfully. Please click add branch to add the branch template to your tree.",
   "static.message.budget.notFound": "Could not find budget ${budget}",
@@ -2497,6 +2510,7 @@
   "static.treeTemplate.startNode": "Start Node",
   "static.common.notSupportIndexDB": "This browser does not support IndexedDB. Please try Chrome, Chromium, or Edge.",
   "static.dashboard.addproduct": "Add planning unit",
+  "static.supplyPlanFormula.amcNote2": "If the report includes multiple programs or planning units, the AMC of the selected program/planning units will be aggregated (summed) into a single total quantity.",
   "static.tooltip.annualChangePer": "Change from previous year. Annual Change (%) = (Annual Target - Previous Year Actual or Target) / (Previous Year Actual or Target)",
   "static.extrapolation.ARIMATextThree": "a linear combination of one or more adjacent points. Both the auto-regression and the moving average are integrated together to fit a best model for the series through differencing, or literally using the difference between points on a time series for the analysis instead of the raw values. ARIMA models have three parameters",
   "static.integration.integrationViewName": "Integration view",
@@ -2574,6 +2588,7 @@
   "static.compareVersion.selectedForecastTitle": "Forecast method that was selected for the final forecast. Forecasts are selected in the Compare and Select Forecast screen.",
   "static.dashboard.programmaster": "Program management",
   "static.tree.QATEstimateForIntervalEvery_months": "QAT estimate for interval (Every X months)",
+  "static.supplyPlanFormula.monthsOfStockMultiprogramPU": "Months Of Stock for Multi-program/planning unit",
   "static.supplyPlan.includeInProjectedShipment": "Include in projected balance",
   "static.dashboard.stockstatusmain": "Stock Status",
   "static.technicalArea.technicalAreaCode": "Technical area code",
@@ -2747,10 +2762,16 @@
   "static.report.id": "QAT Shipment ID",
   "static.problemReport.resolvedDesc": "Problem has been manually marked by reviewer as ‘Resolved’. The reviewer uses this status if this problem will unlikely be corrected via data entry and also does not require further notes in the future. Only a reviewer can mark a problem as ‘Resolved’.",
   "static.importFromQATSupplyPlan.supplyPlanVersion": "Supply Plan Version",
+  "static.supplyPlanFormula.consensusConsumptionEx4": "Program B Actual Consumption",
   "static.extrapolation.Trending": "Trending with no seasonal component, where the observed values have an increasing or decreasing trend. Models applied to such datasets may include",
+  "static.supplyPlanFormula.consensusConsumptionEx3": "Program B Forecasted Consumption",
+  "static.supplyPlanFormula.consensusConsumptionEx6": "Program C Actual Consumption",
   "static.ManageTree.ShowHideForecastMethod": "to show and edit or hide the forecast method, tree name, and region.",
   "static.ForecastSummary.FreightCalculated": "Freight cost is calculated as a percentage of product cost",
+  "static.supplyPlanFormula.consensusConsumptionEx5": "Program C Forecasted Consumption",
   "static.equivalencyUnit.duplicateEUFUP": "Duplicate equivalency unit, forecasting unit, program combination not allowed",
+  "static.supplyPlanFormula.consensusConsumptionEx2": "Program A Actual Consumption",
+  "static.supplyPlanFormula.consensusConsumptionEx1": "Program A Forecasted Consumption",
   "static.procurementAgentPlanningUnit.unitPerPalletText": "Enter Units per Pallet",
   "static.common.max15digittext": "Maximum of 15 characters",
   "static.common.status": "Status",
@@ -2965,6 +2986,7 @@
   "static.extrapolation.mape": "MAPE",
   "static.price.prices": "Prices",
   "static.importIntoQATSupplyPlan.importIntoQATSupplyPlan": "QAT Forecast Import",
+  "static.supplyPlanFormula.amcDef": "Uses adjusted consumption when available, factoring in the number of days stocked out and actual consumption.",
   "static.NodeData.ExtrapolationTab": "Extrapolation Tab",
   "static.supplyPlan.runDate": "Run Date:",
   "static.CompareSelect.ExpectedForecasts": "Check to make sure all expected forecasts appear in the Compare & Select table. To add forecasts, navigate to the",
@@ -2984,6 +3006,7 @@
   "static.dashboard.downloadprogram": "Download program",
   "static.program.programCode": "Program Code",
   "static.ForecastSummary.UsingNationalView": "Using this screen (National View)",
+  "static.supplyPlanFormula.consensusConsumption": "Consensus Consumption",
   "static.message.login.incorrectEmailUser": "Incorrect email or username",
   "static.common.deleteTree": "Delete Tree",
   "static.quantimed.quantimedImportSelectProgramLabel": "Select the QAT program that you want to import into",
@@ -3025,10 +3048,18 @@
   "static.manualTagging.erpShipment": "Enterprise Resource Planning (ERP) Shipment",
   "static.extrapolation.optimizeTES&ARIMA": "Optimize TES & ARIMA",
   "static.shipment.qty": "Quantity",
+  "static.supplyPlanFormula.monthsOfStockEx5Txt5": "Program C Ending Balance = 750",
+  "static.supplyPlanFormula.monthsOfStockEx5Txt4": "Program B AMC = 3,000",
+  "static.supplyPlanFormula.monthsOfStockEx5Txt3": "Program B Ending Balance = 6,000",
   "static.validated.minPercForMode": "Please enter min percentage for mode",
+  "static.supplyPlanFormula.monthsOfStockEx5Txt2": "Program A AMC = 2,500",
   "static.shipment.delinkingsuccess": "Shipment delinked successfully",
+  "static.supplyPlanFormula.monthsOfStockEx5Txt8": "Months Of Stock = 2.91",
+  "static.supplyPlanFormula.monthsOfStockEx5Txt7": "Months Of Stock = (10,000 + 6,000 + 750) / (2,500 + 3,000 + 250)",
   "static.validated.restrictionNoOfMonthsInFutureForBottomDashboard": "Please enter No of months in future for bottom dashboard",
+  "static.supplyPlanFormula.monthsOfStockEx5Txt6": "Program C AMC = 250",
   "static.dashboard.procurementUnitheader": "Procurement Unit",
+  "static.supplyPlanFormula.monthsOfStockEx5Txt1": "Program A Ending Balance = 10,000",
   "static.report.avergeStock": "Average Stock",
   "static.procurementagent.procurementAgentColorCode": "Color Code",
   "static.language.languagecodetext": "Enter language display name",
@@ -3351,6 +3382,7 @@
   "static.pipeline.pplnproductcategory": "PipeLine Planning Unit Category",
   "static.commitVersion.exculdeConsumptionTooltip": "If checked, QAT will exclude any changes to this planning unit on version {{localVersionId}} (local) and revert to the latest server version {{serverVersionId}}.",
   "static.versionSettings.updateForecastTree": "Updating Forecast Trees",
+  "static.showFormula.endingBalancePI1": "= Opening Balance - Consumption + Shipments +/- Adjustments - Projected Expired Stock",
   "static.tree.templateNameRequired": "Please enter template name.",
   "static.extrapolation.WAPE": "WAPE (Weighted Absolute Percentage Error)",
   "static.tree.scenarioName": "Scenario Name",
