Labels generated and version changed

--- a/src/assets/img/locales/pr.json
+++ b/src/assets/img/locales/pr.json
@@ -164,6 +164,7 @@
   "static.listTree.listExistingTree": "Ver uma lista de suas árvores de previsão existentes",
   "static.dashboard.procurementagent": "Agente de compras",
   "static.QATForecastImport.National": "Nacional",
+  "static.extrapolation.estimateTimeOptimiseTESAndArmia": "Tempo estimado para otimizar o TES e o ARIMA em segundos: ",
   "static.problemActionReport.problemCategory": "Categoria do problema",
   "static.tooltip.PriceType": "Selecione um agente de compras para seu tipo de preço. Se os preços do agente estiverem disponíveis, QAT preencherá o preço. Você pode substituir os preços fornecidos pela QAT pelos seus próprios. Se você não vir o agente de compras desejado, selecione \"personalizado\" e indique o nome do agente de compras nas notas.",
   "static.supplyPlanFormula.consensusConsumptionTxt": "Este tipo de consumo só é utilizado se houver vários programas selecionados para agregação. O consumo de consenso é a soma dos valores de consumo real dos programas selecionados a cada mês, se disponível, caso contrário, somará os valores de consumo previstos. Assim, pode incluir valores previstos e reais.",
@@ -579,6 +580,7 @@
   "static.ManageTree.ScenariosModel": "Os cenários são usados para modelar valores diferentes para a mesma árvore de previsão. Para adicionar, editar ou apagar um cenário, use o",
   "static.NodeData.ForecastingNodeType": "Nó de unidade de previsão-Tipo",
   "static.tree.parentLevel": "Nível pai",
+  "static.common.deleted": "Excluída",
   "static.common.remove": "Remover",
   "static.shipment.orderedShipment": "Embarque requisitado",
   "static.common.alphabetsOnly": "Somente são permitidas letras",
@@ -783,6 +785,7 @@
   "static.programPlanningUnit.validReorderFrequencyText": "Insira o intervalo de um pedido para o outro (# meses entre novos pedidos)",
   "static.procurementAgentProcurementUnit.procurementUnitAlreadyExists": "Esta unidade de aquisição já existe",
   "static.scenarioPlanning.endValue": "Valor final",
+  "static.extrapolation.estimateTimeMissingTes": "Tempo estimado para TES e ARIMA em falta em segundos: ",
   "static.product.unit": "Unidade de previsão",
   "static.report.exportCsv": "Exportar CSV",
   "static.supplyPlan.daysOfStockMaxValue": "Insira um valor menor ou igual a 31",
@@ -797,6 +800,7 @@
   "static.priority.low": "Baixo",
   "static.common.customWarningMessage": "Texto de aviso personalizado para alertar os usuários sobre a alteração dos mestres",
   "static.manualTagging.conversionFactor": "Conversão (EGP para QAR)",
+  "static.extrapolation.estimateTimeBulkExtrapolation": "Tempo estimado para extrapolação em massa em segundos: ",
   "static.procurementUnit.widthQty": "Quantidade de largura",
   "static.program.selectzipfile": "Selecione o arquivo zip",
   "static.procurementAgentPlanningUnit.unitPerContainer": "Unidades por contêiner 40'",
