--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3615,5 +3615,6 @@
   "static.currency.conversionrateusd": "Conversion rate to 1 USD",
   "static.logout.confirmLogout": "Are you sure you want to log out?",
   "static.common.node": "Node",
-  "static.pipeline.pipelineConvertorLinux": "Linux."
+  "static.pipeline.pipelineConvertorLinux": "Linux.",
+  "static.ticket.uploadFile": "Upload File"
 }
