Labels generated and version changed

--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -1368,6 +1368,7 @@
   "static.importFromQATSupplyPlan.isRegionInForecastProgram": "Is region in forecast program?",
   "static.realm.no": "No",
   "static.supplyPlan.exportAsPDF": "Export as PDF",
+  "static.ticket.uploadFile": "Upload File",
   "static.program.arrivedToReceivedLeadTime": "Enter `Arrived to Received` lead time (in months)",
   "static.placeholder.usagePeriod": "Warning: Please note that any changes made in this screen will affect the entire application.",
   "static.inventory.adjustmentdetails": "Adjustment Data",
@@ -3470,7 +3471,7 @@
   "static.pipeline.pplnproduct": "Pipeline Planning Unit",
   "static.pipeline.entershelflife": "Enter Shelf Life (months)",
   "static.importFromQATSupplyPlan.multiplierTo": "Multiplier to",
-  "static.unit.multiplierFromARUTOPU": "Conversion Factor (Alternate Reporting to Planning)",
+  "static.unit.multiplierFromARUTOPU": "Conversion Factor (ARU to Planning Unit)",
   "static.mapProcurementUnit.validVendorPriceText": "Enter Procurement Agent Price (in USD)",
   "static.dataset.forecastingProgram": "Forecasting Program",
   "static.listTree.manageTreePage": "Do you want to move to manage tree page?",
