--- a/src/assets/img/locales/pr.json
+++ b/src/assets/img/locales/pr.json
@@ -1368,6 +1368,7 @@
   "static.importFromQATSupplyPlan.isRegionInForecastProgram": "A região está no programa de previsão?",
   "static.realm.no": "Não",
   "static.supplyPlan.exportAsPDF": "Exportar como PDF",
+  "static.ticket.uploadFile": "Carregar arquivo",
   "static.program.arrivedToReceivedLeadTime": "Insira o prazo de execução de chegado até recebido (meses)",
   "static.placeholder.usagePeriod": "Atenção: Observe que quaisquer alterações feitas nesta tela afetarão todo o aplicativo.",
   "static.inventory.adjustmentdetails": "Dados de ajuste",
@@ -3470,7 +3471,7 @@
   "static.pipeline.pplnproduct": "Unidade de planeamento do PipeLine",
   "static.pipeline.entershelflife": "Insira a vida útil (meses)",
   "static.importFromQATSupplyPlan.multiplierTo": "Multiplicador para",
-  "static.unit.multiplierFromARUTOPU": "Fator de conversão (unidade relatório alternativo para planeamento)",
+  "static.unit.multiplierFromARUTOPU": "Fator de conversão (ARU para planeamento)",
   "static.mapProcurementUnit.validVendorPriceText": "Insira o preço do agente de compras (em USD)",
   "static.dataset.forecastingProgram": "Programa de Previsão",
   "static.listTree.manageTreePage": "Deseja mover para a tela Gerenciar árvore de previsão?",
