--- a/src/assets/img/locales/sp.json
+++ b/src/assets/img/locales/sp.json
@@ -1368,6 +1368,7 @@
   "static.importFromQATSupplyPlan.isRegionInForecastProgram": "¿El programa de estimación contiene esta región?",
   "static.realm.no": "No",
   "static.supplyPlan.exportAsPDF": "Exportar como PDF",
+  "static.ticket.uploadFile": "Cargar archivo",
   "static.program.arrivedToReceivedLeadTime": "Ingresar el tiempo de espera desde llegado hasta recibido (en meses)",
   "static.placeholder.usagePeriod": "Advertencia: cualquier cambio efectuado en esta pantalla afectará a toda la aplicación.",
   "static.inventory.adjustmentdetails": "Datos de ajuste",
@@ -3470,7 +3471,7 @@
   "static.pipeline.pplnproduct": "Producto de PipeLine",
   "static.pipeline.entershelflife": "Ingrese la vida útil (meses)",
   "static.importFromQATSupplyPlan.multiplierTo": "multiplicador a",
-  "static.unit.multiplierFromARUTOPU": "Factor de conversión (de producto alternativo a producto)",
+  "static.unit.multiplierFromARUTOPU": "Factor de conversión (PA a producto)",
   "static.mapProcurementUnit.validVendorPriceText": "Ingresar el precio del agente de compras (en USD)",
   "static.dataset.forecastingProgram": "Programa de estimación",
   "static.listTree.manageTreePage": "¿Quieres pasar a la plantalla Administrar árbol de estimación?",
