--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3617,5 +3617,5 @@
   "static.logout.confirmLogout": "Are you sure you want to log out?",
   "static.common.node": "Node",
   "static.pipeline.pipelineConvertorLinux": "Linux.",
-  "static.ticket.uploadFile": "Upload File"
+  "static.message.emailNotTriggered": "User created successfully but email not triggered"
 }
