--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -942,6 +942,7 @@
   "static.tree.branchTemplateNotes3": "are shown. See",
   "static.tree.branchTemplateNotes4": "for the full list.",
   "static.versionSettings.VersionNotes": "Version notes",
+  "static.supplyPlanFormula.instructionHeader": "Program Selection",
   "static.common.copyRow": "Copy Row",
   "static.extrapolation.lowestError": "Lowest Error",
   "static.common.go": "Go",
@@ -3324,9 +3325,12 @@
   "static.procurementUnit.supplier": "Manufacturer",
   "static.program.confirm": "Confirm",
   "static.tooltip.seasonality": "the expected length (in months) of any repetitive pattern in the consumption",
+  "static.supplyPlanFormula.instruction1": "If creating a supply plan report for a single program, the user can select the supply plan version.",
   "static.quantimed.quantimedProductIdLabel": "QM Product ID",
+  "static.supplyPlanFormula.instruction2": "However, if more than one program is selected, local versions of the program will not be available. The version dropdown will not be available. QAT will automatically select the most recent version of the respective programs available on the server.",
   "static.budget.budgetamounttext": "Enter budget amount",
   "static.fundingsource.fundingsourceCode": "Funding Source Display Name",
+  "static.supplyPlanFormula.instruction3": "PLEASE NOTE: The merge program feature of the supply plan report is only available online.",
   "static.dashboard.programSpotlight": "Program Spotlight",
   "static.forecastingunit.forecastingunittext": "Enter Forecasting Unit",
   "static.planningUnit.plannignUnitMeasure": "Enter Planning Unit UoM (Unit of Measure)",
