--- a/src/assets/img/locales/fr.json
+++ b/src/assets/img/locales/fr.json
@@ -942,6 +942,7 @@
   "static.tree.branchTemplateNotes3": "sont indiqués. Voir",
   "static.tree.branchTemplateNotes4": "pour la liste complète.",
   "static.versionSettings.VersionNotes": "Notes de version",
+  "static.supplyPlanFormula.instructionHeader": "Sélection du programme",
   "static.common.copyRow": "Copier la ligne",
   "static.extrapolation.lowestError": "Plus faible % d'erreur",
   "static.common.go": "Aller",
@@ -3324,9 +3325,12 @@
   "static.procurementUnit.supplier": "Fabricant",
   "static.program.confirm": "Confirmer",
   "static.tooltip.seasonality": "la durée prévue (en mois) de tout schéma répétitif dans la consommation",
+  "static.supplyPlanFormula.instruction1": "Si vous créez un rapport de plan d'approvisionnement pour un seul programme, l'utilisateur peut sélectionner la version du plan d'approvisionnement.",
   "static.quantimed.quantimedProductIdLabel": "ID de produit QM",
+  "static.supplyPlanFormula.instruction2": "Cependant, si plusieurs programmes sont sélectionnés, les versions locales ne seront pas disponibles. La liste déroulante des versions ne sera pas accessible. QAT sélectionnera automatiquement la version la plus récente des programmes concernés disponible sur le serveur.",
   "static.budget.budgetamounttext": "Entrez le montant du budget",
   "static.fundingsource.fundingsourceCode": "Nom d`affichage de la source de financement",
+  "static.supplyPlanFormula.instruction3": "ATTENTION : La fonction de fusion de programme du rapport du plan d'approvisionnement est uniquement disponible en ligne.",
   "static.dashboard.programSpotlight": "Coup de projecteur sur le programme",
   "static.forecastingunit.forecastingunittext": "Entrez l`unité de prévision",
   "static.planningUnit.plannignUnitMeasure": "Saisissez l`unité de planification UoM (unité de mesure)",
