--- a/src/assets/img/locales/pr.json
+++ b/src/assets/img/locales/pr.json
@@ -942,6 +942,7 @@
   "static.tree.branchTemplateNotes3": "são mostrados. Ver",
   "static.tree.branchTemplateNotes4": "para a lista completa.",
   "static.versionSettings.VersionNotes": "Notas da versão",
+  "static.supplyPlanFormula.instructionHeader": "Seleção do Programa",
   "static.common.copyRow": "Copiar linha",
   "static.extrapolation.lowestError": "Erro mais baixo",
   "static.common.go": "Ir",
@@ -3324,9 +3325,12 @@
   "static.procurementUnit.supplier": "Fabricante",
   "static.program.confirm": "Certificar",
   "static.tooltip.seasonality": "a duração esperada (em meses) de qualquer padrão repetitivo no consumo",
+  "static.supplyPlanFormula.instruction1": "Ao criar um relatório de plano de fornecimento para um único programa, o usuário pode selecionar a versão do plano de fornecimento.",
   "static.quantimed.quantimedProductIdLabel": "ID do produto QM",
+  "static.supplyPlanFormula.instruction2": "No entanto, se mais de um programa for selecionado, as versões locais do programa não estarão disponíveis. O menu suspenso de versões não estará disponível. O QAT selecionará automaticamente a versão mais recente dos respectivos programas disponíveis no servidor.",
   "static.budget.budgetamounttext": "Insira o valor do orçamento",
   "static.fundingsource.fundingsourceCode": "Nome de exibição da fonte de financiamento",
+  "static.supplyPlanFormula.instruction3": "OBSERVAÇÃO: O recurso de mesclagem de programas do relatório do plano de suprimentos está disponível somente on-line.",
   "static.dashboard.programSpotlight": "Destaque do programa",
   "static.forecastingunit.forecastingunittext": "Insira a unidade de previsão",
   "static.planningUnit.plannignUnitMeasure": "Insira a U.M. (unidade de medida) da unidade de planeamento",
